# moxin-asr

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/libraries/: libAudioCapture.dylib
assets/www/: index.html
assets/www/assets/: index-ByqsFGbw.js  index-CCuJ1lip.css
docs/: api-guide.md  architecture.md  configuration.md  contributing.md  features.md  installation.md  project-structure.md  troubleshooting.md
electron-app/: loading.html  main.js  notarize.js  package.json  preload.js  utils.js
electron-app/assets/icons/: moyoyo.icns
frontend/: .gitattributes  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  index.d.ts  main.ts  router.ts  style.scss
frontend/src/assets/: ball.json
frontend/src/config/: client_config.ts
frontend/src/hooks/: showError.ts  useCache.ts
frontend/src/stores/: config.ts  measure.ts  session.ts
frontend/src/utils/: audio_utils.ts  retry.ts  size.ts
frontend/src/views/: Footer.vue  Header.vue
scripts/: build-electron.sh  build-python.sh  build.sh  clean.sh
src/voice_dialogue/api/: app.py  server.py
src/voice_dialogue/asr/: __init__.py  manager.py  utils.py
src/voice_dialogue/audio/: __init__.py  player.py  vad.py
src/voice_dialogue/cli/: __init__.py  args.py
src/voice_dialogue/config/: llm_config.py  paths.py  speaker_config.py  user_config.py
src/voice_dialogue/core/: base.py  constants.py  enums.py  launcher.py  (+2 more)
tests/: test_audio_generator.py  test_llm_dialogue.py
(+85 files in other folders)
