[project]
name = "voice_dialogue"
version = "1.0.0"
description = "一个基于AI的智能语音对话系统，支持实时语音识别、自然语言处理和语音合成"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cn2an>=0.5.23",
    "einops>=0.8.1",
    "en-core-web-sm",
    "fastapi==0.115.12",
    "ffmpeg-python>=0.2.0",
    "funasr-onnx==0.4.1",
    "g2p-en>=2.1.0",
    "huggingface-hub==0.32.4",
    "jieba>=0.42.1",
    "jieba-fast>=0.53",
    "langchain==0.2.17",
    "langchain-community==0.2.17",
    "langsegment",
    "librosa==0.11.0",
    "llama-cpp-python==0.3.9",
    "loguru==0.7.3",
    "misaki[en]>=0.9.4",
    "opencc>=1.1.9",
    "playsound==1.2.2",
    "pyaudio==0.2.14",
    "pyobjc-framework-avfoundation>=11.0",
    "pypinyin>=0.54.0",
    "pytorch-lightning==2.3.1",
    "pywhispercpp",
    "silero-vad==5.1.2",
    "soundfile==0.13.1",
    "torch==2.3.1",
    "transformers==4.41.2",
    "uvicorn==0.34.3",
    "websockets>=15.0.1",
    "wordsegment>=1.3.1",
]

[tool.uv.sources]
pywhispercpp = { git = "https://github.com/absadiki/pywhispercpp" }
langsegment = { git = "https://github.com/ishine/LangSegment.git" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
